# ZHGameEngine

./: CMakeLists.txt  README.md  build.bat  build.sh  test  test.cpp
Framework/Common/: BaseApplication.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp
Platform/MacOS/: CMakeLists.txt
Platform/Windows/: CMakeLists.txt  D2DApplication.cpp  D2DApplication.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  Win32Application.cpp  WindowsApplication.cpp
lib/windows/: assimp-vc141-mt.lib  glad.lib  lualib.lib
res/shader/: default_fragment.gl  default_vertex.gl  mvp_vertex.gl  uv_fragment.gl  uv_vertex.gl
src/: CMakeLists.txt  main.cpp
src/3rd/assimp/: types.h
src/3rd/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h  BundledAssetIOSystem.h
src/3rd/glad/: glad.h
src/3rd/image/: lib_image.h
src/3rd/lua/: CMakeLists.txt
src/Example/: CMakeLists.txt  Example.hpp  Example_Test_01.cpp  Example_Test_01.hpp
src/Framework/: CMakeLists.txt
src/Framework/Common/: Asset.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  GLApplication.cpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GameObject.cpp  GameObject.hpp  GfxConfiguration.h  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  Render.cpp  Render.hpp  RenderManager.cpp  RenderManager.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  main.cpp
src/Framework/Common/GL/: GLApplication.cpp  GLApplication.hpp  GLRender.cpp  GLRender.hpp  GLShader.cpp  GLShader.hpp
src/Framework/Core/: AssimpData.cpp  AssimpData.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  Camera.hpp  GraphicConfig.hpp  GraphicEngine.cpp  GraphicEngine.hpp  IManager.hpp  ISingleton.hpp  Material.cpp  Material.hpp  Mesh.hpp  Platform.h  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TypeDefine.hpp
src/Framework/Interface/: IApplication.hpp  IManager.hpp  IRuntimeModule.hpp  ISingleton.hpp  Interface.hpp
src/Framework/Lua/: CMakeLists.txt  LuaState.cpp  LuaState.hpp
src/Framework/Renderer/: LineRenderer.hpp  MeshRenderer.hpp  SpriteRenderer.hpp
src/Platform/: CMakeLists.txt
src/Platform/MacOS/: CMakeLists.txt  CocoaApplication.h  CocoaApplication.mm  GLApplication.h  GLView.h  GLView.mm  MacGLApplication.cpp  MacGLApplication.hpp
src/Platform/Windows/: CMakeLists.txt  D2DApplication.cpp  D3DApplication.cpp  D3DApplication.hpp  OpenGLApplication.cpp  OpenGLApplication.hpp  Win32Application.hpp  WindowsApplication.cpp  WindowsApplication.hpp
