cmake_minimum_required (VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project(ZHGameEngine)
include_directories("${PROJECT_SOURCE_DIR}/src/3rd")
include_directories("${PROJECT_SOURCE_DIR}/src/Framework/Common")
include_directories("${PROJECT_SOURCE_DIR}/src/Framework/Interface")
set (PROJECT_LIBRARY_DIR "${PROJECT_SOURCE_DIR}/lib/macos")
add_subdirectory(src)