cmake_minimum_required (VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project(GraphicEngine)
include_directories("${PROJECT_SOURCE_DIR}/src/3rd")
include_directories("${PROJECT_SOURCE_DIR}/src/3rd/lua")
include_directories("${PROJECT_SOURCE_DIR}/src/3rd/stb")
include_directories("${PROJECT_SOURCE_DIR}/src/3rd/assimp")
include_directories("${PROJECT_SOURCE_DIR}/src/Example")
include_directories("${PROJECT_SOURCE_DIR}/src/Framework")
if(${APPLE})
	set (PROJECT_LIBRARY_DIR "${PROJECT_SOURCE_DIR}/lib/macos")
elseif(${WIN32})
	set (PROJECT_LIBRARY_DIR "${PROJECT_SOURCE_DIR}/lib/windows")
endif()
add_subdirectory(src)